compiler/testData/cli/js/languageVersion.kt
package test

fun test() {
    while (true) {
        when {
            true -> break
        }
    }
}
